2022-11-19T00:31:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3501238498 # 635
* notice: last 14d: unq all: 10 5762
* notice: prev accum: outdated-unq outdated-all / unq all: 1212 86103 / 1242 91803
* notice: next accum: outdated-unq outdated-all / unq all: 1213 86513 / 1242 92275
* notice: prev exec diff / last date diff / accum: unq all: +0 +150 -0 -21 / +2 +414 -0 -0 / 2 414
* notice: removed / changed dates: [2022-11-04] / [2022-11-05 2022-11-18]

2022-11-18T16:06:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3498411287 # 634
* notice: last 14d: unq all: 10 5700
* notice: prev accum: outdated-unq outdated-all / unq all: 1212 86103 / 1241 91826
* notice: next accum: outdated-unq outdated-all / unq all: 1212 86103 / 1242 91803
* notice: prev exec diff / last date diff / accum: unq all: +1 +123 -0 -146 / +2 +264 -0 -0 / 2 264
* notice: removed / changed dates: [] / [2022-11-04 2022-11-18]

2022-11-18T08:07:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3495212232 # 633
* notice: last 14d: unq all: 10 5723
* notice: prev accum: outdated-unq outdated-all / unq all: 1212 86103 / 1240 91859
* notice: next accum: outdated-unq outdated-all / unq all: 1212 86103 / 1241 91826
* notice: prev exec diff / last date diff / accum: unq all: +1 +143 -0 -176 / +1 +141 -0 -0 / 1 141
* notice: removed / changed dates: [] / [2022-11-04 2022-11-17 2022-11-18]

2022-11-18T00:35:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3493173466 # 632
* notice: last 14d: unq all: 10 5756
* notice: prev accum: outdated-unq outdated-all / unq all: 1210 85694 / 1239 91387
* notice: next accum: outdated-unq outdated-all / unq all: 1212 86103 / 1240 91859
* notice: prev exec diff / last date diff / accum: unq all: +0 +150 -0 -21 / +2 +415 -0 -0 / 2 415