@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-19T00:31:44Z",
-  "count" : 392,
+  "timestamp" : "2022-11-19T08:06:51Z",
+  "count" : 214,
   "count_minmax" : [ 140, 413 ],
-  "count_decinc" : [ -21, +413 ],
+  "count_decinc" : [ -199, +413 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
