@@ -1,3 +1,11 @@
+2022-11-19T08:06:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3502692163 # 636
+* notice: last 14d: unq all: 10 5729
+* notice: prev accum: outdated-unq outdated-all / unq all: 1213 86513 / 1242 92275
+* notice: next accum: outdated-unq outdated-all / unq all: 1213 86513 / 1244 92242
+* notice: prev exec diff / last date diff / accum: unq all: +2 +145 -0 -178 / +2 +143 -0 -0 / 2 143
+* notice: removed / changed dates: [] / [2022-11-05 2022-11-18 2022-11-19]
+
 2022-11-19T00:31:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3501238498 # 635
 * notice: last 14d: unq all: 10 5762
